# pakodis-f1-fantasy

./: .env.example  .gitignore  DEPLOYMENT.md  F1_FANTASY_DRAFT_PLAN.md  README.md  credentials.json.example  emergency_clean_sheets.py  fix_duplicate_sessions.py  pyproject.toml  render.yaml  requirements.txt  sync_calendar_to_sheet.py  test_debug.py  test_draft.py  test_startup.py  trigger_force_sync.py
src/: __init__.py  config.py  main.py  seed_data.py  server.py
src/data_sources/: __init__.py  openf1_api.py
src/draft/: __init__.py  manager.py  order.py
src/models/: __init__.py  draft_pick.py  driver.py  player.py  session.py
src/scoring/: __init__.py  calculator.py  rules.py
src/sheets/: __init__.py  client.py  draft_state.py  players.py  results.py  schedule.py  scores.py  scoring_rules.py  session_times.py
src/sync/: __init__.py  recovery.py  scheduler.py  state_manager.py
src/utils/: __init__.py  logger.py  rate_limiter.py  retry.py
state/: test_draft_state.json
static/: draft.html  index.html
templates/: scoring_rules.json
