[project]
name = "f1-fantasy-draft"
version = "1.0.0"
description = "F1 2026 Fantasy Draft — driver-based scoring app with Google Sheets backend and mid-season redraft"
requires-python = ">=3.11"
license = "MIT"

dependencies = [
    "gspread>=6.1.0",
    "google-auth>=2.29.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "openai>=1.35.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "apscheduler>=3.10.4",
    "python-dotenv>=1.0.1",
    "pydantic>=2.7.0",
    "tenacity>=8.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
f1-draft = "src.main:main"
f1-seed = "src.seed_data:seed_spreadsheet"
f1-server = "src.server:start"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
